fixed capitalization errors

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
     </style>
 </head>
 <body>
-    <div class="top-nav"><img src="surveyapp/assets/logo.png" id="homeLogo" style="cursor:pointer;"></div>
+    <div class="top-nav"><img src="SurveyApp/Assets/logo.png" id="homeLogo" style="cursor:pointer;"></div>
     <button type="button"id="backButton">&#8617; Back to previous question</button>
     <!-- Confetti -->
     <canvas id="confettiCanvas"></canvas>
@@ -1003,7 +1003,7 @@
                     <div class="glow-wrap radio-glow">
                         <div class="radio-option">
                             <span class="radio-bullet"></span>
-                            <img class="radio-icon" src="surveyapp/assets/${opt.toLowerCase().replace(/,/g, "").replace(/ /g,'-')}.png" alt="${opt} icon">
+                            <img class="radio-icon" src="SurveyApp/Assets/${opt.toLowerCase().replace(/,/g, "").replace(/ /g,'-')}.png" alt="${opt} icon">
                             <span class="radio-label-text">${opt}</span>
                             <input type="radio" name="round2" value="${opt}" id="${id}">
                         </div>
