--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
             justify-content: center;
             align-items: center;
             border-radius: 50%;
+            overflow: hidden;
         }
 
         .spin-button {
